src/{hashbang.html,local.css}: Fix alignment of static page content

--- a/src/local.css
+++ b/src/local.css
@@ -1,4 +1,4 @@
- * {
+* {
   text-indent:-9999px;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -14,37 +14,31 @@ html {
 body {
   display:block;
   position:fixed;
-  top:50%;
-  left:50%;
-  margin-top:-160px;
-  margin-left:-160px;
-  width:320px;
-  height:320px;
   color:#DDD;
   overflow:hidden;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  right: 0px;
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
 }
 h1 {
   text-indent:0px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  position:absolute;
-  top:-50px;
-  left:10px;
-  right:0px;
   line-height:0px;
   font-size:280px;
+  text-align: center;
 }
 a {
   color:white;
   text-decoration:none;
+  text-align: center;
 }
 code {
   text-indent:0px;
   display:block;
-  position:absolute;
-  bottom:0px;
-  left:0px;
-  right:0px;
-  text-align:center;
   font-size:20px;
 }
